# NeuralNet

./: CMakeLists.txt  README.md  libconf.h.in
include/: DELETE_mymath.h  DELETE_mymath_impl.h  activations.h  activations_impl.h  config.h  exceptions.h  initializers.h  layers.h  mymath.h  mymath_impl.h  stack.h  stack_impl.h
include/layers/: base.h  chain.h  chain_impl.h  fc_layer.h  fc_layer_impl.h
lib/: activation.cpp  layers.cpp  mymath.cpp  stack.cpp
src/: main.cpp
test/: CMakeLists.txt  MyMathTests.cpp  StackTests.cpp
test/layers/: Testfc_layer.cpp
